--- a/styles/theme/_typography.scss
+++ b/styles/theme/_typography.scss
@@ -8,7 +8,7 @@
 $url: "https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Oswald:300,400,700&subset=latin,latin-ext";
 
 $family: "Open Sans", sans-serif;
-$size: 16px;
+$size: 15px;
 $line-height: 26px;
 
 $heading-family: "Oswald", sans-serif;
